--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  provider: ^5.0.0
+  # dcdg: ^3.1.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
